Bug fix. Links on comments overflow. Empty comments where showing.

--- a/src/features/Comments/Comments.css
+++ b/src/features/Comments/Comments.css
@@ -45,6 +45,7 @@
 
 .commentBody {
     padding-top: 1rem;
+    word-break: break-all;
 }
 
 /*  Dark Mode  */
