--- a/src/features/Post/Post.css
+++ b/src/features/Post/Post.css
@@ -121,6 +121,7 @@ button {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 
 .showMoreButton {
